tests/invalid/EndOfFile_Invalid_1.whiley
method main():
    int i = 1
    i++
